--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "howl": "^0.2.0",
+    "howler": "^2.2.4",
     "pixi.js": "^8.6.6",
     "vue": "^3.2.13"
   },
